Connected flight and destination controller to FlightDataService
